--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,8 @@
  */
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.im" android:sharedUserId="android.uid.im">
+    package="com.android.im" android:sharedUserId="android.uid.im"
+    android:sharedUserLabel="@string/perm_label">
 
     <uses-permission android:name="com.android.providers.im.permission.READ_ONLY" />
     <uses-permission android:name="com.android.providers.im.permission.WRITE_ONLY" />
