Add an original-package tag that matches the real package name.
Change-Id: Idc9c6eea9a7091198a4cab7ee956d075eeef9f84

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,8 @@
     package="com.android.im" android:sharedUserId="android.uid.im"
     android:sharedUserLabel="@string/perm_label">
 
+    <original-package android:name="com.android.im" />
+
     <uses-permission android:name="com.android.providers.imps.permission.READ_ONLY" />
     <uses-permission android:name="com.android.providers.imps.permission.WRITE_ONLY" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
